overflow bug PDFs

--- a/assets/less/pdf.less
+++ b/assets/less/pdf.less
@@ -29,6 +29,8 @@
     }
     .subheading{
       padding-top:0;
+      overflow-x:visible;
+      max-width: none;
     }
   }
 }
@@ -336,6 +338,8 @@ figure{
         padding: 0;
         font-style: normal;
         font-family: @f-mono;
+
+
       }
     }
   }
